# Brain-tumor-proj

./: .gitignore  README.md
github_assets/: README.md
tumor_detection/: .gitignore  README.md  pyproject.toml  requirements.txt
tumor_detection/configs/: classification.yaml  classification_v1.yaml  segmentation.yaml
tumor_detection/scripts/: evaluate_segmentation.py  infer_classification.py  infer_segmentation.py  train_classification.py  train_segmentation.py
tumor_detection/src/brain_tumor/: __init__.py  config.py
tumor_detection/src/brain_tumor/data/: __init__.py  brats.py  classification.py  transforms.py
tumor_detection/src/brain_tumor/models/: classification.py  segmentation.py
tumor_segmentation/: .gitignore  README.md  requirements.txt
tumor_segmentation/configs/: segmentation_2d.yaml  segmentation_2d_smp.yaml  segmentation_2d_smp_deeplabv3plus_effb4_256.yaml  segmentation_2d_smp_deeplabv3plus_effb4_320.yaml  segmentation_2d_smp_deeplabv3plus_effb4_320_from256_ft.yaml  segmentation_2d_smp_deeplabv3plus_effb4_384_from320_ft.yaml  segmentation_2d_smp_deeplabv3plus_effb4_384_seed70_conservative_from320_ft.yaml  segmentation_2d_smp_deeplabv3plus_resnet50_256_focal.yaml  segmentation_2d_smp_deeplabv3plus_resnet50_320_finetune.yaml  segmentation_2d_smp_deeplabv3plus_resnet50_320_seed43.yaml  segmentation_2d_smp_deeplabv3plus_resnet50_320_seed44.yaml  segmentation_2d_smp_deeplabv3plus_resnet50_320_seed44_continue.yaml  segmentation_2d_smp_deeplabv3plus_resnet50_320_seed44_lowlr.yaml  segmentation_2d_smp_deeplabv3plus_resnet50_320_seed45.yaml  (+42 more)
(+57 files in other folders)
